Fixed img overflowing figure on mobile

--- a/src/_media.scss
+++ b/src/_media.scss
@@ -6,5 +6,6 @@ figure {
   text-align: center;
   img {
     width: auto;
+    max-width: 100%;
   }
 }
